[package]
name = "tic-tac-tide"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
env_logger = "0.8.3"
futures-util = "0.3.12"
petname = "1.1.0"
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.62"
tide = "0.16.0"
tide-websockets = "0.2.0"
